--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 body{
   font-family: "Montserrat";
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 64px 30px 0;
@@ -14,6 +15,7 @@ body{
 }
 
 h1{
+  width: 961px;
   color: #4E5150;
   font-size: 36px;
   font-weight: 600;
@@ -162,7 +164,7 @@ input[type="checkbox"]{
   background-color: #F2F2F2;
   border-radius: 12px;
   padding: 33px 30px 20px;
-  margin-top: 49px; 
+  margin-top: 49px;
 }
 
 .item2__product{
@@ -276,10 +278,6 @@ input[type="checkbox"]{
 }
 
 
-
-
-
-
 .l-footer{
   text-align: center;
   margin: 166px 0 17px;
@@ -290,4 +288,30 @@ input[type="checkbox"]{
   font-size: 14px;
   font-weight: 600;
   line-height: 17px;
+}
+
+@media (max-width:1025px){
+  h1{
+    width: 100%;
+  }
+
+  .l-container{
+    width: 100%;
+  }
+}
+
+@media (max-width:920px){
+  body{
+    padding-top: 30px;
+  }
+  h1{
+    margin-bottom: 0;
+  }
+  .l-container{
+    flex-direction: column-reverse;
+  }
+
+  .item2__wrapper{
+    margin: 30px 0 50px;
+  }
 }
