--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,14 @@ hr{
   width: 217px;
 }
 
+.default-country ~ .item1__text-input {
+  color: #828282;
+}
+
+.default-country{
+  color: #828282;
+}
+
 .text-input--high{
   margin-bottom: 20px;
 }
@@ -170,7 +178,6 @@ input[type="checkbox"]{
 .item2__product{
   margin-bottom: 31.6px;
 }
-
 
 .item2__image__wrapper{
   float: left;
@@ -313,5 +320,71 @@ input[type="checkbox"]{
 
   .item2__wrapper{
     margin: 30px 0 50px;
+  }
+}
+
+@media (max-width:525px){
+  h1{
+    font-size: 24px;
+    line-height: 29px;
+  }
+
+  h2{
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+
+
+  .l-container__item1{
+    width: 100%;
+  }
+
+  .item1__area{
+    flex-direction: column;
+  }
+
+  .text-input--long{
+    width: 100%;
+  }
+
+  .text-input--short{
+    width: 100%;
+  }
+
+  .item2__image__wrapper{
+    width: 122.75px;
+    height: 124.64px;
+  }
+
+  .item2__product__quantity{
+    margin-top: 30px;
+    width: 122.8px;
+  }
+}
+
+@media (max-width:442px){
+  body{
+    padding: 32px 18px;
+  }
+
+  .l-container__item2{
+    width: 100%;
+  }
+
+  .item2__wrapper{
+    width: inherit;
+    margin: 21px 0 0;
+    padding: 30px 26px;
+  }
+
+  .item2__product-name{
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  .item2__product-price{
+    font-size: 14px;
+    line-height: 17px;
   }
 }
